--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     {% include footer.html %}
 
-  <script id="dsq-count-scr" src="//sgeos-github-io.disqus.com/count.js" async></script>
+  <script id="dsq-count-scr" src="//sameen-1.disqus.com/count.js" async></script>
   </body>
 
 </html>
